--- a/finance-lens/src/styles.css
+++ b/finance-lens/src/styles.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -17,13 +15,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+header a{
+  color:white;
+  font-weight: 500;
+}
+
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #1023c8;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #5e5ede;
 }
 
 body {
