--- a/finance-lens/src/styles.css
+++ b/finance-lens/src/styles.css
@@ -5,9 +5,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color-scheme: light dark;
+  color: rgba(143, 128, 128, 0.87);
+  background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,7 +15,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-header a{
+/* header a{
   color:white;
   font-weight: 500;
 }
@@ -27,7 +27,7 @@ a {
 }
 a:hover {
   color: #5e5ede;
-}
+} */
 
 body {
   margin: 0;
@@ -42,19 +42,21 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+header button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 0.7em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color:#0b0b0be0;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
+
 }
 button:focus,
 button:focus-visible {
